
DO NOT DELETE THIS LINE! ADD COMMENTS BELOW
reverting to blockram from csn-platforms-131

----------
aparasha    Date: Thu Jul 31 12:46:49 EDT 2008  CSN: CSN-platforms-137
                  Thu Jul 31 16:46:49 UTC 2008


Directory modules/bluespec/common/fpgaenv/virtual-platform/virtual-devices/front-panel/hybrid
 hybrid-fp.cpp             Locally Modified          136 
 hybrid-fp.rrr             Locally Modified          136 
 hybrid-fp.h               Locally Modified          136 
 hybrid-fp.bsv             Locally Modified          136 

Updated front panel to use client software stubs

----------
aparasha    Date: Fri Aug  1 13:42:05 EDT 2008  CSN: CSN-platforms-138
                  Fri Aug  1 17:42:05 UTC 2008


Directory modules/bluespec/common/fpgaenv/virtual-platform/umf/little-32
 umf-little-32.cpp         Locally Modified          137 
 umf-little-32.h           Locally Modified          137 

added a software marshaller/demarshaller for UINT8

----------
nikhil      Date: Thu Aug  7 17:30:59 CDT 2008  CSN: CSN-platforms-139
                  Thu Aug  7 22:30:59 UTC 2008


Directory modules/bluespec/common/fpgaenv/fpga-components
 Clock100MHz.v             Locally Removed           138 
 software-fpga-components.awb Locally Modified          138 
 UserClock_50_100.v        Locally Added               0 
 hardware-fpga-components.awb Locally Modified          138 
 UserClock.bsv             Locally Added               0 
 Clock100MHz.bsv           Locally Removed           138 

mkUserClock(outFreq, inFreq) generates a clock with frequency outFreq
from a clock of frequency inFreq. Due to implementation reasons, only
certain combinations of <inFreq, outFreq> are legal:

1. out = in: The trivial case
2. out = in / 2: This instantiates a generic clock-divide-by-two circuit.
3. in = 50MHz, out = 100MHz: This instantiates a DCM on the FPGA.

fpga-components defines %param CRYSTAL_CLOCK_FREQ to be 50MHz.